minor bug seem on mobile view solved

--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,8 @@ body {
 .mainsection {
     padding: 50px;
     
-    height: 100vh;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
     display: none;
 }
 .create {
@@ -159,10 +159,10 @@ input:focus,textarea:focus,#submit {
 }
 .marked {
     position: absolute;
-    top: 40px;
-    right: 50px;
+    top: 55px;
+    right: 60px;
     color: rgb(11, 172, 11);
-    font-size: 100px;
+    font-size: 80px;
     display: none;
 }
 .font10{
@@ -205,7 +205,7 @@ input:focus,textarea:focus,#submit {
     padding: 10px;
     text-align: center;
     width: 100%;
-    height: 100%;
+    height: 70%;
     overflow: scroll;
     background-color: aqua;
 }
@@ -218,12 +218,12 @@ input:focus,textarea:focus,#submit {
 #nametag{
     position: absolute;
     width: 100%;
-    top: 175px;
+    top: 172px;
     background-color: rgb(238, 182, 113);
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     color: purple;
 }
 
